trash opacity and link

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ nav > a,
 
 .trash {
   border: 2px solid #ff0000 !important;
+
+  opacity: 0.5; /* Opacity for Modern Browsers */
+  filter: alpha(opacity=50); /* Opacity for IE8 and lower */
+  zoom: 1; /* Fix for IE7 */
 }
 .trashInfo {
   margin: 5px;
