--- a/src/App.css
+++ b/src/App.css
@@ -37,16 +37,6 @@ nav > a,
   flex: 1;
 }
 
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-  color: #eee;
-  padding: 5px;
-  border-top: 1px solid #1d1d1d;
-}
-
 .App-link {
   color: #09d3ac;
 }
@@ -266,8 +256,48 @@ hr {
   position: absolute;
   right: 10px;
 }
+
+/* Footer */
 .footerLink {
   color: #eee;
   margin-right: 5px;
   margin-left: 5px;
+}
+
+.footer > .footer-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 30px 30px 30px;
+  gap: 0px 0px;
+  grid-template-areas:
+    "a"
+    "b"
+    "c";
+}
+
+.footer > .a {
+  grid-area: a;
+}
+
+.footer > .b {
+  grid-area: b;
+}
+.footer > .c {
+  grid-area: c;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: #eee;
+  padding: 5px;
+  border-top: 1px solid #1d1d1d;
+}
+
+.ctr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
